# kubecode

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  TODO.md  eslint.config.js  index.html  install.sh  lara.yaml  package.json  playwright.smoke.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.chunk/: run-playwright-shards.sh  run-playwright-smoke.sh
.claude/commands/: laputa-done.md
.github/: SETUP.md
.github/workflows/: README.md  ci.yml  release.yml
.husky/: pre-push
deploy/: Dockerfile  kubeflow-notebook.yaml
deploy/s6/: init-persistent-home
docs/: ABSTRACTIONS.md  ARCHITECTURE.md  GETTING-STARTED.md  README.md
docs/adr/: 0160-remove-codescene-quality-gate.md  0162-browser-workbench-and-xterm.md  (+35 more)
packaging/: THIRD_PARTY_NOTICES.md
scripts/: bootstrap-nfpm.sh  build-deb.sh  build-standalone.sh  debian-package.test.mjs  docs-links.mjs  docs-links.test.mjs  playwright-kubecode-server.mjs  run-vitest-coverage-shards.mjs  run-vitest-coverage.mjs  smoke-deb.sh  smoke-standalone.sh  standalone.test.mjs  validate-docs.mjs
server/: Cargo.toml
server/src/: agent_discovery.rs  agent_runtime.rs  agents.rs  api.rs  config.rs  git.rs  lib.rs  main.rs  team_api.rs  team_coordinator.rs  team_mcp.rs  teams.rs  terminal.rs  workspace.rs
server/tests/: agent_discovery.rs  agent_runtime.rs  agents.rs  api.rs  deployment.rs  git.rs  real_agents.rs  team_api.rs  team_coordinator.rs  teams.rs  terminal.rs  workspace.rs
src/: index.css  indexBootDiagnostics.test.ts  main.test.ts  main.tsx  types.ts
(+126 files in other folders)
