[package]
name = "kubecode-server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[lib]
name = "kubecode_server"
path = "src/lib.rs"

[[bin]]
name = "kubecode-server"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "=1.2.0", features = ["unstable_elicitation", "unstable_session_fork"] }
agent-client-protocol-rmcp = "=1.0.0"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hex = "0.4"
portable-pty = "0.9"
rusqlite = { version = "0.38", features = ["bundled"] }
rmcp = { version = "=1.8.0", features = ["transport-streamable-http-server"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
